[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/MatchController.gd" type="Script" id=1]
[ext_resource path="res://TileSets/tileset1.tres" type="TileSet" id=2]
[ext_resource path="res://Fonts/futile-pro-v1/FutilePro.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/pixel_Advnture_Sprites/Free/Main Characters/Ninja Frog/Run (32x32).png" type="Texture" id=6]
[ext_resource path="res://PreLoadable/colliderTonneau.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/whitelight.png" type="Texture" id=8]
[ext_resource path="res://PreLoadable/CWbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://PreLoadable/spriteTonneau.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/Transformable.gd" type="Script" id=11]
[ext_resource path="res://Audio/music/mp3-now.com - Electric Six Gay Bar Canned Bread Remix.mp3" type="AudioStream" id=13]
[ext_resource path="res://Shaders/frog_head_band.gdshader" type="Shader" id=14]

[sub_resource type="Environment" id=8]
background_mode = 4
background_canvas_max_layer = 1
glow_enabled = true
glow_intensity = 1.28
glow_blend_mode = 0
glow_hdr_threshold = 1.5

[sub_resource type="ShaderMaterial" id=10]
render_priority = 1
shader = ExtResource( 14 )
shader_param/RED1 = Color( 0.8, 0.188235, 0.282353, 1 )
shader_param/RED2 = Color( 0.611765, 0.105882, 0.301961, 1 )
shader_param/RED3 = Color( 0.894118, 0.290196, 0.290196, 1 )
shader_param/BLUE1 = Color( 0.992157, 1, 0, 1 )
shader_param/BLUE2 = Color( 0.537255, 0.541176, 0.0431373, 1 )
shader_param/BLUE3 = Color( 1, 0.988235, 0.313726, 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 26.5658 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("collision_base:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("collision_base:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.55701, 2.09601 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("collision_base:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"

[sub_resource type="Animation" id=4]
resource_name = "idlea"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collision_base:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collision_base:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.05701, 7.59601 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 1.002
loop = true
step = 0.074
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collision_base:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0791636, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collision_base:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0791636, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.55701, 2.09601 ), Vector2( -1.55701, 2.09601 ), Vector2( -1.55701, 2.09601 ) ]
}

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 153.84
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 19.66
linear_accel_random = 1.0
scale = 0.02
color = Color( 1, 0, 0, 1 )
hue_variation = -1.0

[sub_resource type="DynamicFont" id=11]
size = 33
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -262145, 3, 0, -196609, 3, 0, -131073, 3, 0, -196511, 3, 0, -65537, 3, 0, -130975, 3, 0, -1, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, -65514, 3, 0, -65513, 3, 0, -65512, 3, 0, -65511, 3, 0, -65477, 3, 0, -65476, 3, 0, -65475, 3, 0, -65439, 3, 0, 65535, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 57, 3, 0, 58, 3, 0, 59, 3, 0, 97, 3, 0, 131071, 3, 0, 65562, 3, 0, 65563, 3, 0, 65592, 3, 0, 65593, 3, 0, 65633, 3, 0, 196607, 3, 0, 131101, 3, 0, 131102, 3, 0, 131121, 3, 0, 131122, 3, 0, 131123, 3, 0, 131124, 3, 0, 131125, 3, 0, 131126, 3, 0, 131127, 3, 0, 131128, 3, 0, 131134, 3, 0, 131135, 3, 0, 131136, 3, 0, 131137, 3, 0, 131138, 3, 0, 131139, 3, 0, 131140, 3, 0, 131141, 3, 0, 131142, 3, 0, 131143, 3, 0, 131144, 3, 0, 131145, 3, 0, 131146, 3, 0, 131169, 3, 0, 262143, 3, 0, 196657, 3, 0, 196705, 3, 0, 327679, 3, 0, 262191, 3, 0, 262192, 3, 0, 262193, 3, 0, 262219, 3, 0, 262220, 3, 0, 262221, 3, 0, 262222, 3, 0, 262223, 3, 0, 262224, 3, 0, 262225, 3, 0, 262226, 3, 0, 262227, 3, 0, 262241, 3, 0, 393215, 3, 0, 327712, 3, 0, 327713, 3, 0, 327714, 3, 0, 327715, 3, 0, 327716, 3, 0, 327717, 3, 0, 327766, 3, 0, 327767, 3, 0, 327768, 3, 0, 327769, 3, 0, 327770, 3, 0, 327771, 3, 0, 327772, 3, 0, 327777, 3, 0, 458751, 3, 0, 393313, 3, 0, 524287, 3, 0, 458793, 3, 0, 458794, 3, 0, 458795, 3, 0, 458796, 3, 0, 458797, 3, 0, 458798, 3, 0, 458799, 3, 0, 458849, 3, 0, 589823, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 524318, 3, 0, 524319, 3, 0, 524320, 3, 0, 524385, 3, 0, 655359, 3, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589921, 3, 0, 720895, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655457, 3, 0, 786431, 3, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 720934, 1, 0, 720935, 1, 0, 720936, 1, 0, 720937, 1, 0, 720938, 1, 0, 720939, 1, 0, 720940, 1, 0, 720941, 1, 0, 720942, 1, 0, 720943, 1, 0, 720944, 1, 0, 720945, 1, 0, 720946, 1, 0, 720947, 1, 0, 720948, 1, 0, 720949, 1, 0, 720950, 1, 0, 720951, 1, 0, 720952, 1, 0, 720953, 1, 0, 720954, 1, 0, 720955, 1, 0, 720956, 1, 0, 720957, 1, 0, 720958, 1, 0, 720959, 1, 0, 720960, 1, 0, 720961, 1, 0, 720962, 1, 0, 720963, 1, 0, 720964, 1, 0, 720965, 1, 0, 720966, 1, 0, 720967, 1, 0, 720968, 1, 0, 720969, 1, 0, 720970, 1, 0, 720971, 1, 0, 720972, 1, 0, 720973, 1, 0, 720974, 1, 0, 720975, 1, 0, 720976, 1, 0, 720977, 1, 0, 720978, 1, 0, 720979, 1, 0, 720980, 1, 0, 720981, 1, 0, 720982, 1, 0, 720983, 1, 0, 720984, 1, 0, 720985, 1, 0, 720986, 1, 0, 720987, 1, 0, 720988, 1, 0, 720989, 1, 0, 720990, 1, 0, 720991, 1, 0, 720992, 1, 0, 720993, 3, 0 )

[node name="Ninja_frog" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 1461, -82 )

[node name="Sprite" type="Sprite" parent="Ninja_frog"]
material = SubResource( 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 12

[node name="collision_base" type="CollisionShape2D" parent="Ninja_frog"]
visible = false
position = Vector2( -1.55701, 2.09601 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Ninja_frog"]
current = true
limit_left = -38
limit_bottom = 575
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 9.98
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3
editor_draw_drag_margin = true

[node name="anim" type="AnimationPlayer" parent="Ninja_frog"]
reset_on_save = false
method_call_mode = 1
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/idlea = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="shoot_point" type="Position2D" parent="Ninja_frog"]
position = Vector2( 61, 3 )

[node name="particles" type="Particles2D" parent="Ninja_frog"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 6 )
use_parent_material = true
scale = Vector2( 3, 3 )
z_index = 7
emitting = false
amount = 31
lifetime = 0.3
one_shot = true
randomness = 0.1
draw_order = 1
process_material = SubResource( 7 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 13 )

[node name="transformables" type="Node2D" parent="."]

[node name="boxes" type="Node" parent="transformables"]

[node name="CWbox" parent="transformables/boxes" instance=ExtResource( 9 )]
position = Vector2( 1064, 458 )

[node name="CWbox2" parent="transformables/boxes" instance=ExtResource( 9 )]
position = Vector2( 840, 409 )

[node name="CWbox3" parent="transformables/boxes" instance=ExtResource( 9 )]
position = Vector2( 936, 409 )

[node name="Tonnneaux" type="Node" parent="transformables"]

[node name="Tonneau" type="StaticBody2D" parent="transformables/Tonnneaux"]
position = Vector2( 786, 413 )
script = ExtResource( 11 )
this_shape = "Tonneau"

[node name="spriteTonneau" parent="transformables/Tonnneaux/Tonneau" instance=ExtResource( 10 )]

[node name="colliderTonneau" parent="transformables/Tonnneaux/Tonneau" instance=ExtResource( 7 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="time_log" type="Label" parent="UI"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 11 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos_hider1" type="Position2D" parent="."]
position = Vector2( 823, 196 )

[node name="pos_hider2" type="Position2D" parent="."]
position = Vector2( 1208, -155 )

[node name="pos_hider3" type="Position2D" parent="."]
position = Vector2( 1676, 121 )

[node name="pos_hider4" type="Position2D" parent="."]
position = Vector2( 1359, 272 )

[node name="pos_seeker" type="Position2D" parent="."]
position = Vector2( 476, 307 )
